Updated card styles

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -9,14 +9,14 @@ import dungeonsandsounds from "../images/dungeonsandsounds.png";
 ---
 <Layout title="Chris Zavala">
     <h1 class="font-bold text-accent2 text-3xl pt-5">Projects</h1>
-    <a class="flex text-dark bg-middle rounded-xl link-card w-full" href="https://github.com/zavastopher/Fallout-TTRPG-WebApp" target="_blank">
+    <a class="group flex text-dark bg-accent2 rounded-xl link-card w-full" href="https://github.com/zavastopher/Fallout-TTRPG-WebApp" target="_blank">
         <Image src={fallout} alt="an image of a fallout pip boy" class="max-w-sm"/>
         <div class="p-3 flex flex-col gap-5 h-full">
             <h1 class="font-bold pb-2">Fallout-TTRPG-Pip-Boy</h1>
             <p>
                 A Pip-Boy style web-app for managing character sheets for the Fallout-TTRPG
             </p>
-            <div class="flex flex-wrap gap-1 text-middle">
+            <div class="flex flex-wrap gap-1 text-accent2 group-hover:text-accent1 ease-in duration-500">
                 <span class="flex items-center tag"><Icon name="mingcute:tag-line" />Full-Stack Web-app</span>
                 <span class="flex items-center tag"><Icon name="mingcute:tag-line" />React</span>
                 <span class="flex items-center tag"><Icon name="mingcute:tag-line" />Python Flask</span>
@@ -28,14 +28,14 @@ import dungeonsandsounds from "../images/dungeonsandsounds.png";
             </div>
         </div>
     </a>
-    <a class="flex text-dark bg-middle rounded-xl link-card  w-full" href="https://github.com/zavastopher/wolfwatch" target="_blank">
+    <a class="group flex text-dark bg-accent2 rounded-xl link-card  w-full" href="https://github.com/zavastopher/wolfwatch" target="_blank">
         <Image src={wolfwatch} alt="an image of a wolfwatch user frontend" class="max-w-sm"/>
         <div class="p-3 flex flex-col gap-5 h-full">
             <h1 class="font-bold">Wolfwatch</h1>
             <p>
                 An assignment web-scanner
             </p>
-            <div class="flex flex-wrap gap-1 text-middle">
+            <div class="flex flex-wrap gap-1 text-accent2 group-hover:text-accent1 ease-in duration-500">
                 <span class="flex items-center tag"><Icon name="mingcute:tag-line" />Full-Stack Web-App</span>
                 <span class="flex items-center tag"><Icon name="mingcute:tag-line" />NLP</span>
                 <span class="flex items-center tag"><Icon name="mingcute:tag-line" />Selenium</span>
@@ -48,14 +48,14 @@ import dungeonsandsounds from "../images/dungeonsandsounds.png";
             </div>
         </div>
     </a>
-    <a class="flex text-dark bg-middle rounded-xl link-card  w-full h-fit" href="https://github.com/zavastopher/blackjack" target="_blank">
+    <a class="group flex text-dark bg-accent2 rounded-xl link-card  w-full h-fit" href="https://github.com/zavastopher/blackjack" target="_blank">
         <Image src={blackjack} alt="an image of a blackjack login page" class="max-w-sm"/>
         <div class="p-3 flex flex-col gap-5 h-full">
             <h1 class="font-bold">BlackJack</h1>
             <p>
                 A Blackjack Practicing Web-App
             </p>
-            <p class="flex flex-wrap gap-1 text-middle">
+            <div class="flex flex-wrap gap-1 text-accent2 group-hover:text-accent1 ease-in duration-500">
                 <span class="flex items-center tag"><Icon name="mingcute:tag-line" />Full-Stack Web-App</span>
                 <span class="flex items-center tag"><Icon name="mingcute:tag-line" />NodeJS</span>
                 <span class="flex items-center tag"><Icon name="mingcute:tag-line" />HTML</span>
@@ -64,22 +64,22 @@ import dungeonsandsounds from "../images/dungeonsandsounds.png";
                 <span class="flex items-center tag"><Icon name="mingcute:tag-line" />User Authentication</span>
                 <span class="flex items-center tag"><Icon name="mingcute:tag-line" />Progressive Web-App</span>
                 <span class="flex items-center tag"><Icon name="mingcute:tag-line" />Docker</span>
-            </p>
+            </div>
         </div>
     </a>
-    <a class="flex text-dark bg-middle rounded-xl link-card  w-full h-fit:w" href="https://github.com/zavastopher/Dungeons-And-Sounds?tab=readme-ov-file" target="_blank">
+    <a class="group flex text-dark bg-accent2 rounded-xl link-card  w-full h-fit:w" href="https://github.com/zavastopher/Dungeons-And-Sounds?tab=readme-ov-file" target="_blank">
         <Image src={dungeonsandsounds} alt="an image of a pixel character with a hood and sword" class="max-w-sm" />
         <div class="p-3 flex flex-col gap-5 h-full">
             <h1 class="font-bold pb-2">Dungeons and Sounds</h1>
             <p>
                 A Table Top RPG Simulator that maps the results to MIDI output.
             </p>
-            <p class="flex flex-wrap gap-1 text-middle">
+            <div class="flex flex-wrap gap-1 text-accent2 group-hover:text-accent1 ease-in duration-500">
                 <span class="flex items-center tag"><Icon name="mingcute:tag-line" />Python</span>
                 <span class="flex items-center tag"><Icon name="mingcute:tag-line" />Algorithm Design</span>
                 <span class="flex items-center tag"><Icon name="mingcute:tag-line" />Python Simulation</span>
                 <span class="flex items-center tag"><Icon name="mingcute:tag-line" />Data Mapping</span>
-            </p>
+            </div>
                 
         </div>
     </a>
