Wrote a small about page.

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -8,7 +8,7 @@ interface Props {
 const { href, title, body } = Astro.props;
 ---
 
-<li class="bg-middle flex rounded-md link-card">
+<li class="bg-accent2 flex rounded-md link-card">
 	<a href={href} class="p-5">
 		<h2 class="font-bold">
 			{title}
