--- a/src/pages/tools.astro
+++ b/src/pages/tools.astro
@@ -4,7 +4,7 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Christopher Zavala">
-    <div class="flex flex-col gap-5">
+    <div class="flex flex-col gap-5 pt-5">
         <h1 class="text-accent2 font-bold text-2xl self-center">
             Version Control
         </h1>
