--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,12 +37,12 @@ import linkedIn from '../images/In-White-128@2x.png';
             </a>
         </div>
         <div class="flex gap-5 flex-col sm:flex-row">
-            <Card  title="Tech Stack" body="The technologies I have employed to build a variety of projects." href="zavastopher.github.io/tech-stack"/>
-            <Card title="Projects" body="Projects that showcase some of my key skills." href="zavastopher.github.io/projects"/>
+            <Card  title="Tech Stack" body="The technologies I have employed to build a variety of projects." href="/tech-stack"/>
+            <Card title="Projects" body="Projects that showcase some of my key skills." href="/projects"/>
         </div> 
         <div class="flex gap-5 flex-col sm:flex-row">
-            <Card title="Tools" body="Tools that I employ to get stuff done." href="zavastopher.github.io/tools"/>
-            <Card title="About" body="More about what interests me and where I'm at in my software dev journey." href="zavastopher.github.io/about"/>
+            <Card title="Tools" body="Tools that I employ to get stuff done." href="/tools"/>
+            <Card title="About" body="More about what interests me and where I'm at in my software dev journey." href="/about"/>
         </div>
 	</main>
 </Layout>
