--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -2,27 +2,27 @@
 ---
 
 <header class="flex gap-8 text-accent1">
-    <a href="/zavastopher.github.io">
+    <a href="/">
         <button class="hover:text-accent2 outline outline-offset-8 outline-2 rounded-xl">
             Home
         </button>
     </a>
-    <a href="/zavastopher.github.io/projects" class="hidden sm:flex">
+    <a href="/projects" class="hidden sm:flex">
         <button class="hover:text-accent2 outline outline-offset-8 outline-2 rounded-xl">
             Projects
         </button>
     </a>
-    <a href="/zavastopher.github.io/tech-stack">
+    <a href="/tech-stack">
         <button class="hover:text-accent2 outline outline-offset-8 outline-2 rounded-xl">
             Tech Stack
         </button>
     </a>
-    <a href="/zavastopher.github.io/tools" class="hidden sm:flex">
+    <a href="/tools" class="hidden sm:flex">
         <button class="hover:text-accent2 outline outline-offset-8 outline-2 rounded-xl">
             Tools
         </button>
     </a>    
-    <a href="/zavastopher.github.io/about">
+    <a href="/about">
         <button class="hover:text-accent2 outline outline-offset-8 outline-2 rounded-xl">
             About
         </button>
