--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -93,7 +93,7 @@ import dungeonsandsounds from "../images/dungeonsandsounds.png";
 		font-family: inherit;
 		outline: none;
 		border: none;
-		//background-color: hsl(236, 32%, 26%);
+		/*background-color: hsl(236, 32%, 26%); */
 		overflow: hidden;
 		transition: color 0.4s ease-in-out;
 	}
@@ -126,6 +126,6 @@ import dungeonsandsounds from "../images/dungeonsandsounds.png";
         background-color: #151a29;
         padding: .2rem;
         border-radius: .2rem;
-        //color: #78CA9D;
+        /*color: #78CA9D;*/
     }
 </style>
