Fixed projects page

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -9,8 +9,8 @@ import dungeonsandsounds from "../images/dungeonsandsounds.png";
 ---
 <Layout title="Chris Zavala">
     <h1 class="font-bold text-accent2 text-3xl pt-5">Projects</h1>
-    <a class="group flex text-dark bg-accent2 rounded-xl link-card w-full" href="https://github.com/zavastopher/Fallout-TTRPG-WebApp" target="_blank">
-        <Image src={fallout} alt="an image of a fallout pip boy" class="max-w-sm"/>
+    <a class="group flex flex-col sm:flex-row text-dark bg-accent2 rounded-xl link-card w-full max-w-tq  " href="https://github.com/zavastopher/Fallout-TTRPG-WebApp" target="_blank">
+        <Image src={fallout} alt="an image of a fallout pip boy" class="max-w-full sm:max-w-sm"/>
         <div class="p-3 flex flex-col gap-5 h-full">
             <h1 class="font-bold pb-2">Fallout-TTRPG-Pip-Boy</h1>
             <p>
@@ -28,8 +28,8 @@ import dungeonsandsounds from "../images/dungeonsandsounds.png";
             </div>
         </div>
     </a>
-    <a class="group flex text-dark bg-accent2 rounded-xl link-card  w-full" href="https://github.com/zavastopher/wolfwatch" target="_blank">
-        <Image src={wolfwatch} alt="an image of a wolfwatch user frontend" class="max-w-sm"/>
+    <a class="group flex flex-col sm:flex-row text-dark bg-accent2 rounded-xl link-card  w-full max-w-tq" href="https://github.com/zavastopher/wolfwatch" target="_blank">
+        <Image src={wolfwatch} alt="an image of a wolfwatch user frontend" class="max-w-full sm:max-w-sm"/>
         <div class="p-3 flex flex-col gap-5 h-full">
             <h1 class="font-bold">Wolfwatch</h1>
             <p>
@@ -48,7 +48,7 @@ import dungeonsandsounds from "../images/dungeonsandsounds.png";
             </div>
         </div>
     </a>
-    <a class="group flex text-dark bg-accent2 rounded-xl link-card  w-full h-fit" href="https://github.com/zavastopher/blackjack" target="_blank">
+    <a class="group flex flex-col sm:flex-row text-dark bg-accent2 rounded-xl link-card  w-full h-fit max-w-tq" href="https://github.com/zavastopher/blackjack" target="_blank">
         <Image src={blackjack} alt="an image of a blackjack login page" class="max-w-sm"/>
         <div class="p-3 flex flex-col gap-5 h-full">
             <h1 class="font-bold">BlackJack</h1>
@@ -67,7 +67,7 @@ import dungeonsandsounds from "../images/dungeonsandsounds.png";
             </div>
         </div>
     </a>
-    <a class="group flex text-dark bg-accent2 rounded-xl link-card  w-full h-fit:w" href="https://github.com/zavastopher/Dungeons-And-Sounds?tab=readme-ov-file" target="_blank">
+    <a class="group flex flex-col sm:flex-row text-dark bg-accent2 rounded-xl link-card  w-full max-w-tq h-fit:w" href="https://github.com/zavastopher/Dungeons-And-Sounds?tab=readme-ov-file" target="_blank">
         <Image src={dungeonsandsounds} alt="an image of a pixel character with a hood and sword" class="max-w-sm" />
         <div class="p-3 flex flex-col gap-5 h-full">
             <h1 class="font-bold pb-2">Dungeons and Sounds</h1>
