--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,7 @@ import Header from '../components/header.astro';
 ---
 
 <!doctype html>
-<html lang="en" class="w-fit sm:w-auto m-1">
+<html lang="en" class="w-fit sm:w-auto m-1 max-w-tq">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
